@@ -2431,6 +2431,8 @@ static bool keyHandler(struct KeyHandler *kh, int key)
 		break;
 	}
 
+        cmdwin_flush_to_console();
+
 	// Quit now before advancing turns or anything of that sort. It makes
 	// life easier.
 	if (Quit)
